[project]
name = "finance-planner"
version = "0.1.0"
description = ""
authors = [
    {name = "Salem Salleh",email = "salem.salleh@getmercury.io"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "streamlit (>=1.47.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
